--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 Flask==2.3.3
 requests==2.31.0
 gunicorn==21.2.0
+# Versions minimales pour réduire l'utilisation de la mémoire
+Werkzeug==2.3.7
+Jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.7
+charset-normalizer==3.2.0
+idna==3.4
+certifi==2023.7.22
+urllib3==2.0.4
